<?xml version="1.0"?>
<package>
  <name>robot_operator</name>
  <version>0.1.0</version>
  <description>

     description

  </description>
  <maintainer email="author@mail.com">mjlee111</maintainer>
  <author>author</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>mobile_base_msgs</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>mobile_base_msgs</run_depend>
  <run_depend>audio_common_msgs</run_depend>
 
</package>
